# postgres_dbt

./: README.md  pyproject.toml
dbt_fun/: dbt_project.yml
dbt_fun/macros/: drop_old_tables.sql  schema.yml
dbt_fun/models/marts/core/: dim_customers.sql
dbt_fun/models/staging/jaffle_shop/: src_jaffle_shop.yml  stg_customers.sql  stg_orders.sql
dbt_fun/models/staging/stripe/: src_stripe.yml  stg_payments.sql
dbt_fun/tests/: assert_stg_payments_amount_is_positive.sql
